--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,69 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.13
+aiosignal==1.3.2
 alembic==1.16.2
+annotated-types==0.7.0
 anyio==4.9.0
+attrs==25.3.0
 certifi==2025.6.15
+charset-normalizer==3.4.2
+click==8.2.1
+datasets==3.6.0
+dill==0.3.8
+distro==1.9.0
+fastapi==0.115.14
+filelock==3.18.0
+frozenlist==1.7.0
+fsspec==2025.3.0
+greenlet==3.2.3
 h11==0.16.0
+hf-xet==1.1.5
 httpcore==1.0.9
 httpx==0.28.1
+huggingface-hub==0.33.1
 idna==3.10
 iniconfig==2.1.0
+jiter==0.10.0
+joblib==1.5.1
 Mako==1.3.10
 MarkupSafe==3.0.2
+multidict==6.6.2
+multiprocess==0.70.16
+numpy==2.3.1
+openai==1.93.0
 packaging==25.0
+pandas==2.3.0
 pluggy==1.6.0
-Pygments==2.19.2
-pytest==8.4.1
-sniffio==1.3.1
-SQLAlchemy==2.0.41
-typing_extensions==4.14.0
-fastapi==0.115.14
+propcache==0.3.2
+psycopg2-binary==2.9.10
+pyarrow==20.0.0
 pydantic==2.11.1
 pydantic-settings==2.2.1
 pydantic_core==2.33.0
-fastapi
-uvicorn
-sqlalchemy
-psycopg2-binary
-python-dotenv
-datasets
-scikit-learn
-transformers
-openai
+Pygments==2.19.2
+pytest==8.4.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+pytz==2025.2
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.4
+safetensors==0.5.3
+scikit-learn==1.7.0
+scipy==1.16.0
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.41
+starlette==0.46.2
+threadpoolctl==3.6.0
+tokenizers==0.21.2
+tqdm==4.67.1
+transformers==4.53.0
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+tzdata==2025.2
+urllib3==2.5.0
+uvicorn==0.35.0
+xxhash==3.5.0
+yarl==1.20.1
+flake8==7.3.0
